assets/scss/layouts/_meetup.scss
.meetup {
  .meetup-image {
    display: block;
    margin: 0 auto;
    max-width: $content-container;
  }

  .author {
    display: flex;
    margin-bottom: 40px;

    .photo {
      margin-right: 8px;
    }

    .info {
      .name {
        margin-bottom: 1px;
      }

      .name,
      .subtitle {
        font-size: $font-size;
      }
    }
  }

  ul, ol {
    padding-left: 16px;

    li {
      line-height: 1.5;
      padding-bottom: 16px;
      padding-right: 5px;
    }
  }

  p, li {
    font-size: $font-size-neutral;
  }
}

